# qhck2023team

./: Ctrl-Z.ipynb  The Magic 5-Ball.ipynb  Tick Tock Bloch.ipynb  challenge1.ipynb  challenge3.ipynb  challenge5.ipynb  challenge6.ipynb  pyproject.toml  the_change_of_qubit.ipynb  the_false_proof.ipynb
