[tool.poetry]
name = "qhck2023team"
version = "0.1.0"
description = ""
authors = ["Kohpai <whcwhc78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pennylane = "^0.28.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
